--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -74,3 +74,37 @@ main > section:first-of-type button {
   border-radius: 24px;
   cursor: pointer;
 }
+/* Quote/Testimonial Section */
+main > section:nth-of-type(2) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #c271ff;
+  padding: 60px;
+  color: white;
+}
+
+main > section:nth-of-type(2) > div:first-child img {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin-right: 50px;
+}
+
+main > section:nth-of-type(2) blockquote {
+  font-style: italic;
+  font-size: 22px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+main > section:nth-of-type(2) h3 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+main > section:nth-of-type(2) p {
+  font-size: 14px;
+  color: #fff;
+}
