--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -108,3 +108,81 @@ main > section:nth-of-type(2) p {
   font-size: 14px;
   color: #fff;
 }
+/* Most Popular Tutorials Section */
+main > section:nth-of-type(3) {
+  background-color: #f9f9f9;
+  padding: 60px 20px;
+  text-align: center;
+}
+
+main > section:nth-of-type(3) > h2 {
+  font-size: 32px;
+  color: #071629;
+  margin-bottom: 50px;
+}
+
+main > section:nth-of-type(3) > div {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+main > section:nth-of-type(3) > div > div {
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(7, 22, 41, 0.1);
+  width: calc(25% - 20px);
+  padding: 20px;
+  text-align: left;
+}
+
+main > section:nth-of-type(3) > div > div > div:first-child {
+  position: relative;
+}
+
+main > section:nth-of-type(3) > div > div > div:first-child img:first-child {
+  width: 100%;
+  border-radius: 4px;
+}
+
+main > section:nth-of-type(3) > div > div > div:first-child img:last-child {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 64px;
+  height: 64px;
+}
+
+main > section:nth-of-type(3) h3 {
+  font-size: 16px;
+  color: #071629;
+  margin-top: 20px;
+}
+
+main > section:nth-of-type(3) p {
+  font-size: 14px;
+  color: #6c757d;
+  margin: 8px 0;
+}
+
+main > section:nth-of-type(3) h4 {
+  font-size: 14px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+main > section:nth-of-type(3) > div > div > div:nth-of-type(2),
+main > section:nth-of-type(3) > div > div > div:nth-of-type(3) {
+  display: flex;
+  align-items: center;
+}
+
+main > section:nth-of-type(3) > div > div > div:nth-of-type(2) img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
