--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -243,3 +243,41 @@ main > section:nth-of-type(4) button {
 main > section:nth-of-type(4) button:hover {
   background-color: #a854e2;
 }
+/* FAQ Section */
+main > section:nth-of-type(5) {
+  padding: 60px 20px;
+  background-color: white;
+  color: #071629;
+  text-align: center;
+}
+
+main > section:nth-of-type(5) h2 {
+  font-size: 32px;
+  margin-bottom: 40px;
+}
+
+main > section:nth-of-type(5) > div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  max-width: 1000px;
+  margin: 0 auto;
+  justify-content: space-between;
+  text-align: left;
+}
+
+main > section:nth-of-type(5) > div > div {
+  flex: 1 1 45%;
+}
+
+main > section:nth-of-type(5) > div h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #c271ff;
+}
+
+main > section:nth-of-type(5) > div p {
+  font-size: 14px;
+  line-height: 1.6;
+  color: #7f7f7f;
+}
