--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -281,3 +281,37 @@ main > section:nth-of-type(5) > div p {
   line-height: 1.6;
   color: #7f7f7f;
 }
+footer {
+  background-color: #071629;
+  color: white;
+  padding: 60px 20px 30px;
+  text-align: center;
+}
+
+footer > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+footer img {
+  width: 150px;
+}
+
+footer div a {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+  font-size: 14px;
+}
+
+footer div a:hover {
+  text-decoration: underline;
+}
+
+footer p {
+  margin-top: 40px;
+  font-size: 12px;
+  color: #ffffff88; /* subtle gray */
+}
